@@ -1,6 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import com.rarchives.ripme.ripper.rippers.GfycatporntubeRipper;
@@ -11,14 +13,14 @@ import org.junit.jupiter.api.Test;
 public class GfycatporntubeRipperTest extends RippersTest {
     @Test
     @Tag("flaky")
-    public void testRip() throws IOException {
-        GfycatporntubeRipper ripper = new GfycatporntubeRipper(new URL("https://gfycatporntube.com/blowjob-bunny-puts-on-a-show/"));
+    public void testRip() throws IOException, URISyntaxException {
+        GfycatporntubeRipper ripper = new GfycatporntubeRipper(new URI("https://gfycatporntube.com/blowjob-bunny-puts-on-a-show/").toURL());
         testRipper(ripper);
     }
 
     @Test
-    public void testGetGID() throws IOException {
-        URL url = new URL("https://gfycatporntube.com/blowjob-bunny-puts-on-a-show/");
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL url = new URI("https://gfycatporntube.com/blowjob-bunny-puts-on-a-show/").toURL();
         GfycatporntubeRipper ripper = new GfycatporntubeRipper(url);
         Assertions.assertEquals("blowjob-bunny-puts-on-a-show", ripper.getGID(url));
     }
